# VideoTools

./: .env.example  .gitignore  BENCHMARKS.md  DEVELOPMENT.md  MODEL_SETUP_GUIDE.md  PHASE_6_READY.md  PHASE_6_SUMMARY.md  PLANNING.md  README.md  RUNNING_INTEGRATION_TESTS.md  SKILL.md  TESTING.md  TESTING_QUICKSTART.md  TEST_VIDEOS_SUMMARY.md  TODOS.md  Video-fixer.py  VideoTools-Project-Spec.md  WARP.md  config_template.json  file_verifier.py  pyproject.toml  pytest.ini  secrets_template.json  sync.py  sync_concurrent.py  test_models_stage5.py  video_analyzer.py  video_combiner.py
CameraSync/: README.md  compress.go  config_template.json  go.mod  main.go  sync.go  transcribe.go  ui.go
VideoScanner/: README.md  config.json  scanner.py  video_scan_results.md
scripts/: download_test_videos.py  verify_test_setup.py
src/video_tools_mcp/: __init__.py  server.py
src/video_tools_mcp/config/: __init__.py  models.py  prompts.py
src/video_tools_mcp/models/: __init__.py  model_manager.py  parakeet.py  pyannote.py  qwen_vl.py
src/video_tools_mcp/processing/: __init__.py  audio_extraction.py  diarization_merge.py  frame_extraction.py  transcription.py
src/video_tools_mcp/tools/: __init__.py
src/video_tools_mcp/utils/: __init__.py  file_utils.py  image_utils.py  srt_utils.py
tests/: __init__.py  conftest.py
tests/fixtures/: README.md  __init__.py
tests/fixtures/videos/: README.md
tests/integration/: __init__.py  helpers.py  test_cross_tool_workflows.py  test_screenshot_extraction_integration.py  test_speaker_diarization_integration.py  test_transcription_integration.py  test_video_analysis_integration.py
tests/unit/: __init__.py  test_audio_extraction.py  test_config.py  test_file_utils.py  test_model_manager.py  test_server.py
