[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-tools-mcp"
version = "0.1.0"
description = "MCP server for local video transcription, diarization, and analysis"
authors = [
    {name = "Autumn Brown"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "video", "transcription", "diarization", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Phase 2: Video Transcription with Parakeet MLX
transcription = [
    "parakeet-mlx>=0.4.0",
    "mlx>=0.29.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
]

# Phase 3: Speaker Diarization with Pyannote
diarization = [
    "pyannote-audio>=4.0.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
]

# Phase 4 & 5: Video Analysis and Smart Screenshots
vision = [
    "mlx-vlm>=0.1.0",  # Will be installed in Phase 4
    "imagehash>=4.3.0",  # Will be installed in Phase 5
    "pillow>=8.0,<12.0",  # Match gradio's pillow constraint
]

# All ML features combined
all = [
    "parakeet-mlx>=0.4.0",
    "mlx>=0.29.0",
    "numpy>=2.3.0",
    "scipy>=1.16.0",
    "pyannote-audio>=4.0.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "mlx-vlm>=0.1.0",
    "imagehash>=4.3.0",
    "pillow>=8.0,<12.0",  # Match gradio's pillow constraint
]

[project.scripts]
video-tools-mcp = "video_tools_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_tools_mcp"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--cov=src/video_tools_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
asyncio_mode = "auto"
